# cpp_The_Corp_Game

./: .gitignore  .gitmodules  CMakeLists.txt  CorpGame.sln  CorpGame.vcxproj  CorpGame.vcxproj.filters  _CMakeLists.txt  cpp_The_Corp_Game_VC.sln  cpp_The_Corp_Game_VC.vcxproj  cpp_The_Corp_Game_VC.vcxproj.filters  main.cpp  main.rc  make.py  manual.txt  release.py  version.h
includes/Animation/: Entity.h  Movable.h  Static.h
includes/Characters/: Clerk.h
includes/Controls/: ControlButtonAddClerk.h  ControlButtonAddElevator.h  ControlButtonAddElevatorShaftMiddle.h  ControlButtonAddElevatorShaftTop.h  ControlButtonAddOffice.h  ControlCashIndicator.h  ControlTimeIndicator.h
includes/EntityAnimation/: EntityAnimation.h  Movable.h
includes/Objects/: ControlButtonAddClerk.h  ControlButtonAddOffice.h  Ground.h
includes/Office/: Elevator.h  ElevatorShaft.h  ElevatorShaftMiddle.h  ElevatorShaftTop.h  Office.h  OfficeClerk.h
includes/System/: ControlPanel.h  EntityContainer.h  Enum.h  ResourceLoader.h  System.h  ViewHandler.h
includes/Text/: TextEntity.h
includes/Utls/: GameTime.h
resources/locale/: en.yml  ru.yml
src/Animation/: CharacterAnimation.cpp  Entity.cpp  Entity.h  EntityAnimation.cpp  Movable.cpp  Movable.h  Static.cpp
src/Background/: Cloud.cpp  Cloud.h  Ground.cpp  Ground.h  GroundArtifact.cpp  GroundArtifact.h  Tree.cpp  Tree.h
src/Basic/: Animation.cpp  Animation.h  Entity.cpp  Entity.h  Movable.cpp  Movable.h
src/Characters/: Accountant.cpp  Accountant.h  BaseCharacter.cpp  BaseCharacter.h  Clerk.cpp  Clerk.h  Manager.cpp  Manager.h
src/Component/: Destination.cpp  Destination.h  Elevator.cpp  Elevator.h  WorkPlace.cpp  WorkPlace.h
src/Controls/: ControlButtonAddClerk.cpp  ControlButtonAddClerk.h  ControlButtonAddElevator.cpp  ControlButtonAddElevatorCabin.cpp  ControlButtonAddElevatorCabin.h  ControlButtonAddElevatorShaftMiddle.cpp  ControlButtonAddElevatorShaftMiddle.h  ControlButtonAddElevatorShaftTop.cpp  ControlButtonAddElevatorShaftTop.h  ControlButtonAddOffice.cpp  ControlButtonAddOffice.h  ControlCashIndicator.cpp  ControlCashIndicator.h  ControlTimeIndicator.cpp  ControlTimeIndicator.h
src/Deubg/: Debug.cpp
src/Objects/: ControlButtonAddClerk.cpp  ControlButtonAddOffice.cpp  Door.cpp  Door.h  Elevator.cpp  ElevatorCabin.cpp  ElevatorCabin.h  ElevatorShaft.cpp  ElevatorShaftMiddle.cpp  ElevatorShaftMiddle.h  ElevatorShaftTop.cpp  ElevatorShaftTop.h  Ground.cpp  Ground.h
src/Office/: Chair.cpp  Chair.h  Office.cpp  Office.h  OfficeClerk.cpp  OfficeClerk.h
src/System/: ControlPanel.cpp  ControlPanel.h  DebugPattern.cpp  DebugPattern.h  Direction.h  EntityContainer.cpp  EntityContainer.h  EntityGroup.cpp  EntityGroup.h  Enum.h  GameTime.cpp  GameTime.h  ResourceLoader.cpp  ResourceLoader.h  SaveManager.cpp  SaveManager.h  System.cpp  System.h  ViewHandler.cpp  ViewHandler.h
src/Text/: TextEntity.cpp  TextEntity.h
src/Ui/: BasicUi.cpp  BasicUi.h  ControlButtonAddAccountant.cpp  ControlButtonAddAccountant.h  ControlButtonAddClerk.cpp  ControlButtonAddClerk.h  ControlButtonAddElevator.cpp  ControlButtonAddElevator.h  ControlButtonAddElevatorCabin.cpp  ControlButtonAddElevatorCabin.h  ControlButtonAddElevatorShaftMiddle.cpp  ControlButtonAddElevatorShaftMiddle.h  ControlButtonAddElevatorShaftTop.cpp  ControlButtonAddElevatorShaftTop.h  ControlButtonAddManager.cpp  ControlButtonAddManager.h  ControlButtonAddOffice.cpp  ControlButtonAddOffice.h  ControlTimeIndicator.cpp  MoneyIndicator.cpp  MoneyIndicator.h  Popup.cpp  Popup.h  PopupButton.cpp  PopupButton.h  Question.cpp  Question.h
src/Ui/MainPanel/: Button10x.cpp  Button10x.h  Button1x.cpp  Button1x.h  Button5x.cpp  Button5x.h  ButtonPause.cpp  ButtonPause.h  Cog.cpp  Cog.h  MainPanelOverlay.cpp  MainPanelOverlay.h
src/Ui/Questions/: QAddAccountant.cpp  QAddAccountant.h  QAddClerk.cpp  QAddClerk.h  QAddElevator.cpp  QAddElevator.h  QAddManager.cpp  QAddManager.h  QAddOffice.cpp  QAddOffice.h  Question.cpp  Question.h
src/World/: World.cpp  World.h
